src/objects/vlocity_ins__PartyMergeMetadata__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The Vlocity Party Merge Metadata custom setting configures the behavior of party merge for a given party lookup or master/detail relationship.</description>
    <fields>
        <fullName>vlocity_ins__CustomImplementationClassName__c</fullName>
        <label>Custom Implementation Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IgnoreTransferKeys__c</fullName>
        <label>Ignore Transfer Keys</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LookupIdField__c</fullName>
        <label>Lookup Id Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Party Merge Metadata</label>
</CustomObject>